# BattleCityOpenGL

./: .gitignore  CMakeLists.txt
res/Shaders/: fragment_shader.txt  vertex_shader.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
